# fhn_dnn

./: .editorconfig  .gitignore  README.md  WARP.md  pyproject.toml
data/: .gitignore  slice_data.ipynb  view_data.ipynb
data/2020/: view_data.ipynb  view_noise.ipynb
data/2020-12-09/: fhn_T200_samplePrior_spikeDuration.npy  fhn_T200_samplePrior_spikeRate.npy  noise_correlated_Nt1000_Nsim10000_correlation.npy  slice_data.ipynb
data/float32/: fhn_T200_samplePrior_objective_trace.npy  fhn_T200_samplePrior_theta.npy  fhn_T200_samplePrior_time.npy  noise_correlated_Nt1000_Nsim10000_stddev.npy
pytorch/: .gitignore  _TODO.md  _backup_run_ae.py  _test_ae.py  _test_sv.py  data.py  model.py  net.py  nets.py  opt_utils.py  output.txt  plot_utils.py  requirements.txt  run_ae.py  run_dnn.py  run_dnn_ref.out  run_unet.py  single_file.py  singular_values.npy  singular_values_full.npy  singular_values_train.npy
pytorch/configs/: params.yaml  params_ae.yaml  params_dnn.yaml  params_unet.yaml
tensorflow/: data.py  model.py  requirements.txt  run_dnn.py  run_dnn_ref.out
tensorflow/configs/: params.yaml
utils/: utils.py
